# master_ingenieria_informatica_ugr

./: .gitmodules  README.md
CC/: README.md
DES/: README.md
DES/Ejercicios de clase/: 05_eje_MDT.md  Analizar_una_página_web_ouna_aplicación_móvilpara_ver_si_se_han.md  Análisis del Ideal.md  Ejercicio Seminario 5 Navegación.md  Ejercicio Seminario 5 iOS.md  ejeS1_crea1_2021.md  ejeS4_AppMovil.md  ejeS4_EstructuraAPP.md  ejeS4_HTA.md  ejeS4_WireFlow.md  ejeT1_AnalisisIU.md  ejeT1_Nielsen.md  tgranollers.md
DSS/: README.md
DSS/Ejercicios/: Ejercicio_OCL.md
DSS/Practica 1/Codigo/: .classpath  .project  pom.xml
IC/: README.md
IC/Practica 1/: Memoria.md  README.md  Tutorial.ipynb  practica1.py
IC/Practica 2/: Cargo.toml  Memoria.md  README.md
IC/Practica 2/src/: genetic_algorithm.rs  main.rs  tai256c.rs
PGPI/: README.md
PGPI/Ejercicios/: Buscar el valor de MTBF para 3 dispositivos de red.md  Ejercicio 2 Estimación.md  Ejercicio tema 8.md  Ejercicios 2 y 3 teoría: certificaciones PMP y Prince2.md  Ejercicios Tema 9.md  Ejercicios tema 4 Cálculos en red temporal.md  Escoge dos sistemas de control de versiones y realiza un pequeño trabajo.md  Listado de ofertas de trabajo con requisito de certificación ITL, TMN, PDIOO, o FCAPS.md  Listar 2 protocolos para configurar de forma automatizada dispositivos de red.md  Tareas tema 6.md
TID/: README.md
TID/Practica 1/: README.md  autos.txt
TID/Practica 2/: README.md
TID/Practica 3/: README.md  eBayAuctions.xls
TID/Practica 4/: README.md  prestamo.xls
TID/Trabajo teoria/: TIDEjemplo.ipynb
(+106 files in other folders)
