[package]
name = "practica_2_ic"
version = "0.1.0"
authors = ["Arturo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
rand = "0.8.3"
rayon = "1.5.0"
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
derive_builder = "0.9.0"